<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="6dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="6dp">

    <RelativeLayout
        android:id="@+id/widget_datetime_row"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:visibility="gone">

        <TextClock
            android:id="@+id/widget_clock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/widget_date"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="32sp"
            android:autoSizeMaxTextSize="92sp"
            android:autoSizeStepGranularity="2sp"
            android:fontFamily="sans-serif-rounded"
            android:format12Hour="h:mm"
            android:format24Hour="HH:mm"
            android:gravity="start|top"
            android:paddingEnd="8dp"
            android:shadowColor="#66000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@android:color/white"
            android:textSize="92sp"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/widget_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/widget_clock"
            android:format12Hour="EEE, MMM d"
            android:format24Hour="EEE, MMM d"
            android:shadowColor="#44000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#D6D9DE"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/widget_top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_datetime_row">

        <TextView
            android:id="@+id/widget_updated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:shadowColor="#44000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/widget_updated_placeholder"
            android:textColor="#99D6D9DE"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/widget_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/widget_updated_time"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:shadowColor="#66000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/widget_location_placeholder"
            android:textColor="#99D6D9DE"
            android:textSize="13sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/widget_row_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/widget_top_row"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/widget_two_main_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/widget_two_current_icon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@null" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf" />

            <TextView
                android:id="@+id/widget_two_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#66000000"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/widget_temp_placeholder"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/widget_two_feels_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:shadowColor="#66000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/widget_feels_like_placeholder"
            android:textColor="#CCFFFFFF"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_row_rich"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/widget_top_row"
        android:layout_marginTop="4dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/widget_rich_left_side"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/widget_rich_main_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/widget_rich_current_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/widget_rich_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:shadowColor="#66000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/widget_temp_placeholder"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/widget_hl_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical|start"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/widget_high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#66000000"
                        android:shadowDx="0"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/widget_high_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/widget_low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#66000000"
                        android:shadowDx="0"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/widget_low_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/widget_rich_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:shadowColor="#66000000"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/widget_feels_like_placeholder"
                android:textColor="#CCFFFFFF"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_rich_right_side"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/widget_hourly_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/widget_hour_row_1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/widget_hour_1_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/widget_hour_time_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/widget_hour_1_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:layout_marginStart="6dp"
                        android:translationX="10dp"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/widget_hour_1_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginStart="24dp"
                        android:text="@string/widget_temp_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/widget_hour_row_2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/widget_hour_2_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/widget_hour_time_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/widget_hour_2_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:layout_marginStart="6dp"
                        android:translationX="10dp"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/widget_hour_2_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginStart="24dp"
                        android:text="@string/widget_temp_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/widget_hour_row_3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/widget_hour_3_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/widget_hour_time_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/widget_hour_3_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:layout_marginStart="6dp"
                        android:translationX="10dp"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/widget_hour_3_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginStart="24dp"
                        android:text="@string/widget_temp_placeholder"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
